--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,8 @@
         <activity android:name=".tabActivity1" />
         <activity android:name=".tabActivity2" />
         <activity android:name=".tabActivity3"></activity>
+        <activity android:name=".roomActivity"></activity>
+
     </application>
 
 </manifest>
