--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,17 +11,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Splashscreen"
+        <activity
+            android:name=".Splashscreen"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
         <activity android:name=".Login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
@@ -29,10 +31,21 @@
         <activity android:name=".member_rgeister" />
         <activity android:name=".tabActivity1" />
         <activity android:name=".tabActivity2" />
-        <activity android:name=".tabActivity3"></activity>
-        <activity android:name=".roomActivity"></activity>
-        <activity android:name=".f"></activity>
+        <activity android:name=".tabActivity3" />
+        <activity android:name=".roomActivity" />
+        <activity android:name=".f" />
+        <activity android:name=".bulletin_board_in"/>
+        <activity android:name=".bulletin_board"></activity>
+        <activity
+            android:name=".ConditionMessage"
+            android:label="ConditionMessage" />
 
     </application>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CAMERA" />
+
+    <uses-feature android:name="android.hardware.camera2" />
 
 </manifest>
